--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/static/css/reveal.min.css">
     <link rel="stylesheet" href="/static/css/theme/default.css" id="theme">
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/themes/vader/jquery-ui.css" />
-    <link rel="stylesheet" href="/static/lib/css/zenburn.css">
+    <link rel="stylesheet" href="/static/css/zenburn.css">
     <script>
             document.write( '<link rel="stylesheet" href="/static/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );</script>
 
@@ -64,7 +64,7 @@
                         次
                     </h1>
                     <h2>
-                        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;相见
+                        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;相见
                     </h2>
                 </section>
             </section>
@@ -82,8 +82,11 @@
             </section>
             <section>
                 <section>
+                    <h2>那时</h2>
+                </section>
+                <section>
                     <h2>
-                        <span>那时我对你的了解</span>
+                        <span>我对你的了解</span>
                     </h2>
                 </section>
                 <section>
@@ -91,7 +94,7 @@
                         <span>还只有人人上的那张头像</span>
                         <br></h2>
                     <div>
-                        <img src="http://hdn.xnimg.cn/photos/hdn421/20110920/2010/h_large_4voy_3c680000407d2f75.jpg"></div>
+                        <img src="/static/img/xiaoyan.jpg"></div>
                 </section>
                 <section>
                     <h2>
@@ -164,20 +167,14 @@
                     </h2>
                 </section>
                 <section>
-                    <h2>
-                        <span>你</span>
-                        <span style="orphans: 2;widows: 2;letter-spacing: -0.02em;">
-                            <font color="#cc0000">不幸</font>
-                        </span>
-                        <span>成为了</span>
-                    </h2>
-                    <h2>
+                    <h2>你<font color="#cc0000">不幸</font>成为了</h2>
+                    <h1>
                         <span>第</span>
                         <span style="orphans: 2;widows: 2;letter-spacing: -0.02em;">
                             <font color="#cc0000">1</font>
                         </span>
                         <span>个</span>
-                    </h2>
+                    </h1>
                     <h2>
                         <span>坐在我单车后座的女生</span>
                     </h2>
@@ -203,7 +200,8 @@
                     </h2>
                     <div>
                         <img src="/static/img/RollerCoaster.gif">
-                        <br></div>
+                        <br>
+                    </div>
                 </section>
             </section>
             <section>
@@ -251,6 +249,8 @@
                 </section>
                 <section>
                     <h2>那时</h2>
+                </section>
+                <section>
                     <h2>
                         你叫我
                         <font color="#000099">学霸</font>
@@ -290,7 +290,7 @@
                         <span>当他唱到<font color="#cc0000">“你是我的衍”</font>时</span>
                     </h2>
                     <h2>
-                        <span>我的偷偷的看了看你</span>
+                        <span>我偷偷地看了看你</span>
                     </h2>
                 </section>
                 <section>
@@ -333,34 +333,37 @@
                 </section>
                 <section>
                     <h2>但是这句话真的很文艺</h2>
-                    <h2><font color="#cc0000">有木有！！！</font></h2>
+                    <h1><font color="#cc0000">有木有！！！</font></h1>
                 </section>
             </section>
             <section>
                 <section>
-                    <h2><font color="#cc0000">ANYWAY</font></h2>
+                    <h1><font color="#cc0000">ANYWAY</font></h1>
                 </section>
                 <section>
-                    <h2>我只是想告诉你</h2>
+                    <h2>我只是</h2>
+                </section>
+                <section>
+                    <h2>想告诉你</h2>
                     <h2>一个<font color="#cc0000">惊天大秘密</font></h2>
                 </section>
                 <section>
                     <h2>其实</h2>
                 </section>
                 <section>
-                    <h2>戴上耳机！</h2>
-                    <h2>把音量开大！</h2>
-                    <h2>
+                    <h1>戴上耳机！</h1>
+                    <h1>把音量开大！</h1>
+                    <h1>
                         然后
-                        <a href="http://nyan.capricc.io/http://nyan.capricc.io/caigu">点我</a>
+                        <a href="http://nyan.capricc.io/http://nyan.capricc.io/caigu" color="#cc0000">点我</a>
                         ！
-                    </h2>
+                    </h1>
                 </section>
             </section>
         </div>
     </div>
 
-    <script src="/static/lib/js/head.min.js"></script>
+    <script src="/static/js/head.min.js"></script>
     <script src="/static/js/reveal.min.js"></script>
 
     <script>
@@ -476,7 +479,7 @@
 
             // Optional libraries used to extend on reveal.js
             dependencies: [{
-                src: '/static/lib/js/classList.js',
+                src: '/static/js/classList.js',
                 condition: function() {
                     return !document.body.classList;
                 }
